data/derived/comb/progs/unify/prog6560.ml.out
Characters 33-36:
  let f a x = a*a+ f a in
                   ^^^
Error: This expression has type 'a -> int
       but an expression was expected of type int
